--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -1,3 +1,222 @@
-// Place all the styles related to the Games controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+/*
+// VARIABLES
+*/
+$background: #ffffe9;
+$background-blue: #94b3c4;
+$background-seafoam: #d3e3d8;
+$background-darktan: #f0f5db;
+$background-green: #dbe8db;
+
+$green: #399499;
+$red: #9f0d33;
+
+/*
+// BASE STYLES
+*/
+html {
+  font-size: 62.5%;
+  line-height: 1.4;
+  -webkit-font-smoothing: antialiased;
+  font-family: sans-serif;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+td,
+th {
+  padding: 0;
+}
+
+/*
+// Default Page
+*/
+
+body {
+  background: $background;
+  color: black;
+  font-size: 1.8rem;
+  margin: 0px;
+  padding: 0px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  line-height: 1.3em;
+  text-transform: uppercase;
+}
+
+h1 { font-size: 5.6rem; line-height: 6.9rem; }
+h2 { font-size: 3.4rem; line-height: 4.7rem; }
+h3 { font-size: 2.5rem; line-height: 3.8rem; }
+h4 { font-size: 2.0rem; line-height: 3.3rem; }
+h5 { font-size: 2.0rem; line-height: 3.3rem; }
+h6 { font-size: 1.2rem; line-height: 2.5rem; }
+
+
+h2, h3 {
+  color: $green;
+}
+
+h4 {
+  color: black;
+  margin-bottom: 0px;
+}
+
+.center {
+  text-align: center;
+}
+
+p {
+  margin: 0px;
+}
+
+.messages {
+  background: $background-blue;
+  color: white;
+
+  p {
+    margin-bottom: 20px;
+    padding: 10px;
+    text-transform: uppercase;
+  }
+}
+
+
+
+.columns {
+  display: table;
+  position: relative;
+  width: 100%;
+}
+
+
+
+
+.left-column {
+  display: table-cell;
+  padding-right: 30px;
+  vertical-align: top;
+  width: 25%;
+
+  .mgs-logo {
+    display: block;
+    margin: 30px auto 50px;
+  }
+
+  .countries-container {
+    background: $background-darktan;
+    padding: 20px;
+
+    table {
+      width: 100%;
+
+      thead td {
+        font-weight: bold;
+      }
+
+      td {
+        text-align: center;
+      }
+
+      td:first-child {
+        text-align: left;
+      }
+
+      .arrow {
+        background: url('/assets/arrows.png') 0px 0px no-repeat;
+        display: inline-block;
+        height: 20px;
+        width: 20px;
+      }
+
+      .up   { background-position: 5px   7px; }
+      .down { background-position: 5px -17px; }
+    }
+
+
+
+
+  }
+
+  .terror-container {
+    background: $background-green;
+    margin: 40px -40px -20px 80px;
+    padding: 20px 20px 50px 20px;
+  }
+
+}
+
+.centre-column {
+  display: table-cell;
+  vertical-align: top;
+  width: 50%;
+
+  .round-container {
+    text-align: center;
+
+    h3.paused {
+      color: $red;
+    }
+  }
+
+  .news-container {
+    margin-bottom: 40px;
+
+    a.news {
+      color: $green;
+      display: inline-block;
+      font-size: 1.5rem;
+      font-weight: bold;
+      margin-top: 10px;
+      text-decoration: none;
+      text-transform: uppercase;
+    }
+  }
+}
+
+
+
+.right-column {
+  background-color: $background-seafoam;
+  display: table-cell;
+  vertical-align: top;
+  width: 25%;
+
+  .riot-top {
+    background-color: $background;
+    height: 175px;
+    width: 100%;
+  }
+
+  .riot-image {
+    display: block;
+    margin: -150px auto 0px;
+  }
+
+  .rioters-container {
+    padding: 20px;
+    text-align: center;
+
+    .activity-container {
+      margin-top: 50px;
+    }
+
+    .activity-image {
+      display: block;
+      margin: 0 auto;
+    }
+  }
+
+}
