--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -1,3 +1,9 @@
+<script type="text/javascript">
+
+</script>
+
+<div ng-controller="DashboardCtrl">
+</div>
 <div class="messages">
   <p>Example message</p>
 </div>
@@ -5,7 +11,6 @@
 <div class="columns">
   <div class="left-column">
     <img src="/assets/mgs-logo.png" class="mgs-logo">
-
     <div class="countries-container">
       <h3 class="center">Country Status</h3>
 
