--- a/app/views/terror_trackers/index.html.erb
+++ b/app/views/terror_trackers/index.html.erb
@@ -1,25 +1,60 @@
-<p id="notice"><%= notice %></p>
+<h1>Listing Terror Tracker Entry</h1>
+<%= link_to 'New Terror Tracker Entry', new_terror_tracker_path %>
 
-<h1>Listing Terror Trackers</h1>
+<%= form_for(@terror_tracker) do |f| %>
+  <% if @terror_tracker.errors.any? %>
+    <div id="">
+      <h2><%= pluralize(@terror_tracker.errors.count, "error") %> prohibited this terror_tracker from being saved:</h2>
 
-<table>
+      <ul>
+      <% @terror_tracker.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="actions">
+    <%= f.label :description %> </br>
+    <%= f.text_area :description, :size => "100x2"%></br>
+    <%= f.label :values do %>
+      <%= f.label :round%>
+      <%= f.number_field :round, :in => 0..12, :step => '1', :value=> @current_round%>
+      <%= f.label :amount %>
+      <%= f.number_field :amount, :in => -100..100, :step => '1' %>
+    <% end %></br>
+    <%= f.submit %>
+  </div>
+<% end %>
+
+
+<h2>Total Terror: <%= @tcount %></h2>
+ <div class="table-responsive"> 
+    <table class="table table-striped table-bordered">
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <th>#</th>
+      <th >Round</th>
+      <th >Amount</th>
+      <th >Description</th>
+      <th >Details</th>
+      <th >Edit</th>
+      <th >Destroy</th>
     </tr>
   </thead>
 
   <tbody>
-    <% @terror_trackers.each do |terror_tracker| %>
+    <% @terror_trackers.each_with_index do |terror_tracker, index| %>
       <tr>
-        <td><%= link_to 'Show', terror_tracker %></td>
+        <td><%= index+1 %></td>
+        <td><%= terror_tracker.round %></td>
+        <td><%= terror_tracker.amount %></td>
+        <td><%= terror_tracker.description %></td>
+        <td><%= link_to 'Details', terror_tracker %></td>
         <td><%= link_to 'Edit', edit_terror_tracker_path(terror_tracker) %></td>
         <td><%= link_to 'Destroy', terror_tracker, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Terror tracker', new_terror_tracker_path %>
+</div>
