--- a/app/views/public_relations/_form.html.erb
+++ b/app/views/public_relations/_form.html.erb
@@ -12,6 +12,14 @@
   <% end %>
 
   <div class="actions">
+    <%= f.label :country %> </br>
+    <%= f.select :country, options_for_select(@countries, selected = @public_relation.country) %>
+    <%= f.label :description %> </br>
+    <%= f.text_area :description, :size => "60x5"%></br>
+    <%= f.label :round %> </br>
+    <%= f.number_field :round, :in => 0..12, :step => '1', :value=> @current_round %> [Default is current round]</br>
+    <%= f.label :pr_amount %> </br>
+    <%= f.number_field :pr_amount, :in => -5..5, :step => '1' %>
     <%= f.submit %>
   </div>
 <% end %>
