Improved UN dashboard and created footer navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+<%= render "layouts/header_navbar" %>
+<% unless current_page?('/')%>
+  <div class="adminControl">
+  <%= yield %>
+  </div>
+<% else %>
+  <%= yield %>
+<% end %>
 </body>
 </html>
