--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= render "layouts/header_navbar" %>
+<%= render "layouts/footer_navbar" %>
 <% unless current_page?('/')%>
   <div class="adminControl">
   <%= yield %>
