--- a/app/views/layouts/_footer_navbar.html.erb
+++ b/app/views/layouts/_footer_navbar.html.erb
@@ -5,6 +5,7 @@
     <li><%= link_to 'Dashboard', root_path , method: :get %></li>
     <li><%= link_to 'United Nations', un_dashboard_path %></li>
     <li><%= link_to 'Terror Tracker controls', terror_trackers_path %></li>
+    <li><%= link_to 'Human Controls', human_control_path %></li>
     <li><%= link_to 'PR controls', public_relations_path %></li>   
   </ul>
 </div>
