--- a/app/views/public_relations/_form.html.erb
+++ b/app/views/public_relations/_form.html.erb
@@ -19,9 +19,9 @@
     <%= f.label :round %> </br>
     <%= f.number_field :round, :in => 0..12, :step => '1', :value=> @current_round %> [Default is current round]</br>
     <%= f.label :pr_amount %> </br>
-    <%= f.number_field :pr_amount, :in => -5..5, :step => '1' %>
-    <%= f.label :source %> </br>
-    <%= f.text_field :source, :size => "30", :placeholder => "UN or Terror" %>
+    <%= f.number_field :pr_amount, :in => -10..10, :step => '1' %></br>
+    <%= f.label :source %>
+    <%= f.select :source, options_for_select(PublicRelation::VALID_SOURCES, selected = @public_relation.source) %></br>
     <%= f.submit %>
   </div>
 <% end %>
