--- a/app/views/public_relations/un_dashboard.html.erb
+++ b/app/views/public_relations/un_dashboard.html.erb
@@ -16,6 +16,8 @@
       <p>
         If neither Main Description and Main Modifier are entered in, then individual countries with a blank PR Modifier and Description will be ignored.
       </p>
+      <p>Negative PR is stored as UN Crisis and Positive PR is stored as UN Bonus.
+      </p>
         <table class="table">
           <thead>
             <tr>
@@ -41,34 +43,7 @@
     <% end %>
   </div>
 </div>
-<h2>Total PR Changes</h2>
-<table class="table">
-  <thead>
-    <tr>
-      <th >Round</th>
-      <th >Details</th>
-      <th >Edit</th>
-      <th >Destroy</th>
-      <th >Country</th>
-      <th >Amount</th>
-      <th >Description</th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @public_relations.each do |public_relation| %>
-      <tr>
-        <td><%= public_relation.round %></td>
-        <td><%= link_to 'Details', public_relation %></td>
-        <td><%= link_to 'Edit', edit_public_relation_path(public_relation) %></td>
-        <td><%= link_to 'Destroy', public_relation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <td><%= public_relation.country%></td>
-        <td><%= public_relation.pr_amount %></td>
-        <td><%= public_relation.description %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+<%= render 'layouts/public_relations_listing' %>
 <br>
 
