Add admin controls

--- a/app/views/public_relations/un_dashboard.html.erb
+++ b/app/views/public_relations/un_dashboard.html.erb
@@ -1,4 +1,4 @@
-<h1>UN Controls</h1>
+<h1>United Nations Controls</h1>
 <div class="panel panel-primary">
   <div class="panel-heading">
     <h3 class="panel-title">Bulk UN PR Creation</h3>
