time controls and fixed terror label

--- a/app/views/games/admin.html.erb
+++ b/app/views/games/admin.html.erb
@@ -21,9 +21,9 @@
 <% end %>
 </h2>
 <h2>Set Next Time</h2>
-<%= form_tag("/update_time", method: "post") do%>
-  <%= select_datetime(@game.next_round.in_time_zone('America/New_York')) %>
-  <%= submit_tag %>
+<%= form_for(@game, url: update_time_path(@game)) do |f|%>
+  <%= f.datetime_select(:next_round, :ampm => true) %>
+  <%= f.submit %>
 
 <% end %>
 <h2>Game is currently 
