--- a/app/views/layouts/_footer_navbar.html.erb
+++ b/app/views/layouts/_footer_navbar.html.erb
@@ -7,6 +7,7 @@
     <li><%= link_to 'Terror Tracker controls', terror_trackers_path %></li>
     <li><%= link_to 'Human Controls', human_control_path %></li>
     <li><%= link_to 'PR controls', public_relations_path %></li>   
+    <li><%= link_to 'News controls', news_messages_path %></li>   
     <li><%= link_to 'Admin controls', admin_control_path %></li>   
   </ul>
 </div>
