--- a/app/views/public_relations/country_status.html.erb
+++ b/app/views/public_relations/country_status.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing PRs for <%= @country %></h1>
+<h1><%= @country %> PR View</h1>
 
 <h3> PR Amounts by Round </h3>
 <table class="table">
@@ -22,7 +22,7 @@
 
 
 <%= render 'layouts/country_pr_menu' %>
-
+</br>
 <%= link_to 'New Public Relation Entry', new_public_relation_path(:country=> @country) %>
 
 <h2>Listing Public Relations for <%= @country %></h2>
