--- a/app/views/games/admin.html.erb
+++ b/app/views/games/admin.html.erb
@@ -19,7 +19,7 @@
 <% end %>
 </h2>
 <h2>Set Next Time</h2>
-<p>Current time is: <%= @game.next_round %></p>
+<p>Current time is: <%= @time %></p>
 <%= form_for(@game, url: update_time_path(@game)) do |f|%>
   <%= f.datetime_select(:next_round, :ampm => true) %>
   <%= f.submit %>
