--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -66,7 +66,7 @@
 
       <div class="rioters-container">
         <h3>Rioters</h3>
-        <%= @data["rioters"] %>
+        {{rioters}}
 
         <div class="activity-container">
           <img class="activity-image" src="/assets/activity.png" />
