--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -49,7 +49,7 @@
 
       <h3>News</h3>
       <div class="news-container" ng-if="news.length>0" ng-repeat="news_item in news">
-        <h4>{{news_item.title}}<h4>
+        <h4>{{news_item.title}}</h4>
           <p>{{news_item.content}}</p>
           <a class="news" href="#">{{news_item.created_at}}</a>
       </div>
