Better improvements for Human

--- a/app/views/public_relations/country_status.html.erb
+++ b/app/views/public_relations/country_status.html.erb
@@ -20,6 +20,8 @@
   </tbody>
 </table>
 
+<h4>Current Round is <%= @roundNum %>.  Total is: <%= @roundTotal %></h4>
+
 
 <%= render 'layouts/country_pr_menu' %>
 </br>
