--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -51,7 +51,10 @@
       <div class="news-container" ng-if="news.length>0" ng-repeat="news_item in news">
         <h4>{{news_item.title}}</h4>
           <p>{{news_item.content}}</p>
-          <a class="news" href="#">{{news_item.created_at| date:'h:mma'}}</a>
+          </br>
+          <img ng-src="{{news_item.media_url}}" 
+            style="max-width: 500px; max-height:500px" /></br>
+          <a class="news">{{news_item.created_at| date:'h:mma'}}</a>
       </div>
       <div class="news-container" ng-if="news.length==0">
         <h4>Nothing has happened yet<h4>
