Got news printing working.  Also updated GDP to be calculated on past 2 rounds.

--- a/app/views/games/dashboard.html.erb
+++ b/app/views/games/dashboard.html.erb
@@ -13,7 +13,7 @@
           <thead>
             <tr>
               <td>Country</td>
-              <td>GDP</td>
+              <td>GDP Trends</td>
             </tr>
           </thead>
           <tbody>
