--- a/app/views/layouts/_footer_navbar.html.erb
+++ b/app/views/layouts/_footer_navbar.html.erb
@@ -1,5 +1,5 @@
 <% unless current_page?('/')%>
-<nav class="navbar-inverse navbar-fixed-bottom">
+<nav class="navbar-inverse navbar-fixed-bottom noPrint">
 <div class="container-fluid">
   <ul class="nav nav-pills ">
     <li><%= link_to 'Dashboard', root_path , method: :get %></li>
@@ -8,6 +8,7 @@
     <li><%= link_to 'Human Controls', human_control_path %></li>
     <li><%= link_to 'PR controls', public_relations_path %></li>   
     <li><%= link_to 'News controls', news_messages_path %></li>   
+    <li><%= link_to 'Tweets controls', tweets_path %></li>   
     <li><%= link_to 'Admin controls', admin_control_path %></li>   
   </ul>
 </div>
