--- a/app/views/news_messages/index.html.erb
+++ b/app/views/news_messages/index.html.erb
@@ -9,7 +9,7 @@
       <th >Round</th>
       <th >Title</th>
       <th >Content</th>
-      <th >Media_url</th>
+      <th >Media</th>
 
     </tr>
   </thead>
@@ -23,7 +23,7 @@
         <th ><%= news_message.round %></th>
         <th ><%= news_message.title %></th>
         <th ><%= news_message.content %></th>
-        <th ><img src'=<%= news_message.media_url %>'/></th>
+        <th ><img src='<%= news_message.media_url %>'/></th>
 
       </tr>
     <% end %>
