--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,4 +1,4 @@
-
+<h2>Do not touch if you are not Kevin</h2>
 <%= link_to import_tweets_path, method: :post, class: "btn btn-default" do %>
       <%= submit_tag "Import Tweets" %>
     <% end %>
