--- a/app/views/news_messages/_form.html.erb
+++ b/app/views/news_messages/_form.html.erb
@@ -21,6 +21,10 @@
     <%= f.label :media_url %> </br>
     <%= f.text_field :media_url %> </br>
 
+    <%= f.label "Publish Content?" %> <br />
+    <%= f.check_box :visible_content %> <br />
+    <%= f.label "Publish Image?" %> <br />
+    <%= f.check_box :visible_image %> <br />
     <%= f.submit %>
   </div>
 <% end %>
