Working alien communications font change

--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -28,6 +28,9 @@ html {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+.alien{
+  font-family: Vorlon !important;
+}
 
 table {
   border-collapse: collapse;
