Updated the paper a bit and added a follow @WatchSkies thing.

--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -157,6 +157,7 @@ p {
     background: $background-green;
     margin: 40px -40px -20px 80px;
     padding: 20px 20px 50px 20px;
+    font-size: 16px;
   }
 
 }
@@ -210,6 +211,7 @@ p {
 
   .rioters-container {
     padding: 20px;
+    font-size:16px;
     text-align: center;
 
     .activity-container {
